<resources>
    <string name="app_name" translatable="false">Users Task</string>
    <!--                validations                -->
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_age">Please enter your age</string>
    <string name="please_enter_job_title">Please enter job title</string>
    <string name="please_enter_gender">Please enter gender</string>

    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="new_registration">Registration</string>
    <string name="Home">Home</string>
</resources>