<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.registration.RegistrationFragment">

    <include
        android:id="@+id/i_toolbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/i_toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_first_name_title"
                style="@style/TxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                style="@style/txtInputLayoutFilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_first_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    style="@style/edit_txt_filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/please_enter_name"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:inputType="textNoSuggestions"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_age_title"
                style="@style/TxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_first_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_age"
                style="@style/txtInputLayoutFilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_age_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_age"
                    style="@style/edit_txt_filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/please_enter_age"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_job_title"
                style="@style/TxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/job_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_age" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_job"
                style="@style/txtInputLayoutFilled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:errorEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/tv_job_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_job"
                    style="@style/edit_txt_filled"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/please_enter_job_title"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAlignment="viewStart" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gender_title"
                style="@style/TxtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_job" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_gender"
                style="@style/Theme.App.TextInputLayout.Selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_4sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_gender_title">

                <AutoCompleteTextView
                    android:id="@+id/atxt_gender"
                    style="@style/txtInputLayoutFilled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:hint="@string/please_enter_gender"
                    android:inputType="none"
                    android:saveEnabled="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_gender_error"
                style="@style/TxtDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:text="@string/please_enter_gender"
                android:textColor="@color/colorRed"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_gender" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/new_registration"
                app:layout_constraintTop_toBottomOf="@id/til_gender"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>